Criação do front-end da view Contato/Editar

--- a/ControleDeContatos/Views/Contato/Editar.cshtml
+++ b/ControleDeContatos/Views/Contato/Editar.cshtml
@@ -1,6 +1,10 @@
-﻿<div class="text-center">
+﻿@{
+    ViewData["Title"] = "Editar contato";
+}
+
+<div class="text-center">
     <br />
-    <h1 class="display-4">Cadastrar contato</h1>
+    <h1 class="display-4">Editar contato</h1>
     <br />
 </div>
 
@@ -23,6 +27,6 @@
 
     <br />
 
-    <button type="submit" class="btn btn-primary w-100">Adicionar</button>
+    <button type="submit" class="btn btn-primary w-100">Alterar</button>
     <a class="btn btn-secondary w-100" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
 </form>
