--- a/ControleDeContatos/Views/Contato/Index.cshtml
+++ b/ControleDeContatos/Views/Contato/Index.cshtml
@@ -33,7 +33,7 @@
                 <td>mark@hotmail.com</td>
                 <td>12 91111-1111</td>
                 <td>
-                    <a role="button" class="btn btn-primary btn-sm">Editar</a>
+                    <a role="button" class="btn btn-primary btn-sm" asp-controller="Contato" asp-action="Editar">Editar</a>
                     <a role="button" class="btn btn-secondary btn-sm">Excluir</a>
                 </td>
             </tr>
@@ -43,7 +43,7 @@
                 <td>jacob@hotmail.com</td>
                 <td>12 91111-1111</td>
                 <td>
-                    <a role="button" class="btn btn-primary btn-sm">Editar</a>
+                    <a role="button" class="btn btn-primary btn-sm" asp-controller="Contato" asp-action="Editar">Editar</a>
                     <a role="button" class="btn btn-secondary btn-sm">Excluir</a>
                 </td>
             </tr>
@@ -53,7 +53,7 @@
                 <td>joão@hotmail.com</td>
                 <td>12 91111-1111</td>
                 <td>
-                    <a role="button" class="btn btn-primary btn-sm">Editar</a>
+                    <a role="button" class="btn btn-primary btn-sm" asp-controller="Contato" asp-action="Editar">Editar</a>
                     <a role="button" class="btn btn-secondary btn-sm">Excluir</a>
                 </td>
             </tr>
