Criação do front-end da view Contato/ApagarConfirmacao e melhoria nos botões 'Excluir' na página 'Listagem de contatos'

--- a/ControleDeContatos/Views/Contato/Index.cshtml
+++ b/ControleDeContatos/Views/Contato/Index.cshtml
@@ -34,7 +34,7 @@
                 <td>12 91111-1111</td>
                 <td>
                     <a role="button" class="btn btn-primary btn-sm" asp-controller="Contato" asp-action="Editar">Editar</a>
-                    <a role="button" class="btn btn-secondary btn-sm">Excluir</a>
+                    <a role="button" class="btn btn-danger btn-sm" asp-controller="Contato" asp-action="ApagarConfirmacao">Excluir</a>
                 </td>
             </tr>
             <tr>
@@ -44,7 +44,7 @@
                 <td>12 91111-1111</td>
                 <td>
                     <a role="button" class="btn btn-primary btn-sm" asp-controller="Contato" asp-action="Editar">Editar</a>
-                    <a role="button" class="btn btn-secondary btn-sm">Excluir</a>
+                    <a role="button" class="btn btn-danger btn-sm" asp-controller="Contato" asp-action="ApagarConfirmacao">Excluir</a>
                 </td>
             </tr>
             <tr>
@@ -54,7 +54,7 @@
                 <td>12 91111-1111</td>
                 <td>
                     <a role="button" class="btn btn-primary btn-sm" asp-controller="Contato" asp-action="Editar">Editar</a>
-                    <a role="button" class="btn btn-secondary btn-sm">Excluir</a>
+                    <a role="button" class="btn btn-danger btn-sm" asp-controller="Contato" asp-action="ApagarConfirmacao">Excluir</a>
                 </td>
             </tr>
         </tbody>
