Adicionando espaçamento entre os botões na tela cadastrar, editar e apagarConfirmação

--- a/ControleDeContatos/Views/Contato/Criar.cshtml
+++ b/ControleDeContatos/Views/Contato/Criar.cshtml
@@ -27,6 +27,6 @@
 
     <br />
 
-    <button type="submit" class="btn btn-primary w-100" >Adicionar</button>
+    <button type="submit" class="btn btn-primary w-100 mb-2" >Adicionar</button>
     <a class="btn btn-secondary w-100" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
 </form>
