--- a/ControleDeContatos/Views/Contato/Editar.cshtml
+++ b/ControleDeContatos/Views/Contato/Editar.cshtml
@@ -27,6 +27,6 @@
 
     <br />
 
-    <button type="submit" class="btn btn-primary w-100">Alterar</button>
+    <button type="submit" class="btn btn-primary w-100 mb-2">Alterar</button>
     <a class="btn btn-secondary w-100" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
 </form>
