--- a/ControleDeContatos/Views/Contato/Criar.cshtml
+++ b/ControleDeContatos/Views/Contato/Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Cadastrar contato";
 }
 
@@ -8,21 +9,21 @@
     <br />
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Criar" method="post">
 
     <div class="mb-3">
         <label for="Nome" class="form-label">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do contato">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato">
     </div>
 
     <div class="mb-3">
         <label for="Email" class="form-label">Email</label>
-        <input type="text" class="form-control" placeholder="Digite o email do contato">
+        <input type="text" asp-for="Email" class="form-control" placeholder="Digite o email do contato">
     </div>
 
     <div class="mb-3">
         <label for="Celular" class="form-label">Celular</label>
-        <input type="text" class="form-control" placeholder="Digite o celular do contato">
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do contato">
     </div>
 
     <br />
