--- a/ControleDeContatos/Views/Contato/Index.cshtml
+++ b/ControleDeContatos/Views/Contato/Index.cshtml
@@ -5,6 +5,22 @@
 
 <div class="text-center">
 
+    @if (TempData["MensagemSucesso"] != null)
+    {
+        <div class="alert alert-success" role="alert">
+            <button type="button" class="btn-close" aria-label="Close"></button>
+            @TempData["MensagemSucesso"]
+        </div>
+    }
+
+    @if (TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn-close" aria-label="Close"></button>
+            @TempData["MensagemErro"]
+        </div>
+    }
+
     <br />
 
     <h1 class="display-4">Listagem de contatos</h1>
