--- a/ControleDeContatos/Views/Contato/Index.cshtml
+++ b/ControleDeContatos/Views/Contato/Index.cshtml
@@ -33,7 +33,7 @@
 
     <br />
 
-    <table class="table">
+    <table class="table" id="table-contatos">
         <thead>
             <tr>
                 <th scope="col">#</th>
