--- a/ControleDeContatos/Views/Usuario/Index.cshtml
+++ b/ControleDeContatos/Views/Usuario/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model List<ContatoModel>
+﻿@model List<UsuarioModel>
 @{
-    ViewData["Title"] = "Listagem de contatos";
+    ViewData["Title"] = "Listagem de Usuários";
 }
 
 <div class="text-center">
@@ -23,23 +23,24 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de contatos</h1>
+    <h1 class="display-4">Listagem de usuários</h1>
     
     <br />
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-success" role="button" asp-controller="Contato" asp-action="Criar">Cadastrar contato</a>
+        <a class="btn btn-success" role="button" asp-controller="Contato" asp-action="Criar">Adicionar novo usuário</a>
     </div>
 
     <br />
 
-    <table class="table" id="table-contatos">
+    <table class="table" id="table-usuarios">
         <thead>
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Nome</th>
+                <th scope="col">Login</th>
                 <th scope="col">Email</th>
-                <th scope="col">Celular</th>
+                <th scope="col">Data de cadastro</th>
                 <th scope="col"></th>
             </tr>
         </thead>
@@ -48,16 +49,17 @@
             {
                 int contador = 1;
 
-                foreach (ContatoModel contato in Model)
+                foreach (UsuarioModel usuario in Model)
                 {
                     <tr>
                         <th scope="row">@contador</th>
-                        <td>@contato.Nome</td>
-                        <td>@contato.Email</td>
-                        <td>@contato.Celular</td>
+                        <td>@usuario.Nome</td>
+                        <td>@usuario.Login</td>
+                        <td>@usuario.Email</td>
+                        <td>@usuario.DataCadastro de cadastro</td>
                         <td>
-                            <a role="button" class="btn btn-primary btn-sm" asp-route-id="@contato.Id" asp-controller="Contato" asp-action="Editar">Editar</a>
-                            <a role="button" class="btn btn-danger btn-sm" asp-route-id="@contato.Id" asp-controller="Contato" asp-action="ApagarConfirmacao">Excluir</a>
+                            <a role="button" class="btn btn-primary btn-sm" asp-route-id="@usuario.Id" asp-controller="Usuario" asp-action="Editar">Editar</a>
+                            <a role="button" class="btn btn-danger btn-sm" asp-route-id="@usuario.Id" asp-controller="Usuario" asp-action="ApagarConfirmacao">Excluir</a>
                         </td>
                     </tr>
                     contador++;
@@ -65,7 +67,7 @@
             }
             else
             {
-                <tr class="odd"><td valign="top" colspan="5">Nenhum contato encontrado</td></tr>
+                <tr class="odd"><td valign="top" colspan="5">Nenhum usuário encontrado</td></tr>
             }
         </tbody>
     </table>
